--- a/styles/Mobbern3.1/template/event/overall_header_head_append.html
+++ b/styles/Mobbern3.1/template/event/overall_header_head_append.html
@@ -1,1 +1,1 @@
-<!-- INCLUDECSS @dmzx_memberprofileviews/memberprofileviews.css -->
+{% INCLUDECSS '@dmzx_memberprofileviews/memberprofileviews.css' %}
